--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^8.0.9",
+    "node-cron": "^4.1.1",
     "nodemailer": "^6.9.16",
     "twilio": "^5.4.0"
   },
