--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.10",
     "express": "^4.18.2",
     "mongoose": "^8.0.9",
     "node-cron": "^4.1.1",
