--- a/server/config.env
+++ b/server/config.env
@@ -1,6 +1,6 @@
 PORT=4000
 FRONTEND_URL=http://localhost:5173
-MONGO_URI=mongodb://127.0.0.1:27017/MERN_AUTHENTICATION
+MONGO_URI=mongodb+srv://shubhplay8:Shubh123@cluster0.thce3dc.mongodb.net/
 TWILIO_ACCOUNT_SID=AC59692c5d32f98a565976daf6fafce390
 TWILIO_AUTH_TOKEN=16afd229bef63d1a85c78524625e0981
 TWILIO_PHONE_NUMBER=9377095283
