Fix: updated CORS config for deployed frontend

--- a/server/config.env
+++ b/server/config.env
@@ -1,5 +1,5 @@
 PORT=4000
-FRONTEND_URL=https://mern-2z1r.onrender.com
+FRONTEND_URL=https://mern-jv68.onrender.com
 MONGO_URI=mongodb+srv://shubhplay8:Shubh123@cluster0.thce3dc.mongodb.net/MERN_AUTHENTICATION?retryWrites=true&w=majority
 TWILIO_ACCOUNT_SID=AC59692c5d32f98a565976daf6fafce390
 TWILIO_AUTH_TOKEN=16afd229bef63d1a85c78524625e0981
