--- a/server/config.env
+++ b/server/config.env
@@ -8,7 +8,7 @@ TWILIO_PHONE_NUMBER=+919377095283
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=465
 SMTP_MAIL=technicalbhagatji1111@gmail.com
-SMTP_PASSWORD=crhn bvzu rjmr pcha
+SMTP_PASSWORD=dnug mpob fpbz zpxi
 
 
 JWT_EXPIRE=7d
