--- a/server/config.env
+++ b/server/config.env
@@ -6,6 +6,7 @@ TWILIO_AUTH_TOKEN=16afd229bef63d1a85c78524625e0981
 TWILIO_PHONE_NUMBER=+919377095283
 
 SMTP_HOST=smtp.gmail.com
+SMTP_SERVICE=gmail
 SMTP_PORT=465
 SMTP_MAIL=technicalbhagatji1111@gmail.com
 SMTP_PASSWORD=dnug mpob fpbz zpxi
