--- a/server/config.env
+++ b/server/config.env
@@ -9,7 +9,7 @@ SMTP_HOST=smtp.gmail.com
 SMTP_SERVICE=gmail
 SMTP_PORT=465
 SMTP_MAIL=technicalbhagatji1111@gmail.com
-SMTP_PASSWORD=dnug mpob fpbz zpxi
+SMTP_PASSWORD=masb wlmq oeiy arbt
 
 
 JWT_EXPIRE=7d
