--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage": "https://Shubhamsingh168.github.io/MERN-",
   "name": "client",
   "private": true,
   "version": "0.0.0",
@@ -8,9 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "preview": "vite preview"
   },
   "dependencies": {
     "axios": "^1.7.9",
@@ -30,8 +27,7 @@
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
-    "gh-pages": "^6.3.0",
     "globals": "^15.13.0",
-    "vite": "^5.4.19"
+    "vite": "^6.0.3"
   }
 }
