--- a/server/config.env
+++ b/server/config.env
@@ -1,14 +1,15 @@
 PORT=4000
-FRONTEND_URL=http://localhost:5173
-MONGO_URI=mongodb://127.0.0.1:27017/MERN_AUTHENTICATION
+FRONTEND_URL=https://mern-jv68.onrender.com
+MONGO_URI=mongodb+srv://shubhplay8:Shubh123@cluster0.thce3dc.mongodb.net/MERN_AUTHENTICATION?retryWrites=true&w=majority
 TWILIO_ACCOUNT_SID=AC59692c5d32f98a565976daf6fafce390
 TWILIO_AUTH_TOKEN=16afd229bef63d1a85c78524625e0981
-TWILIO_PHONE_NUMBER=9377095283
+TWILIO_PHONE_NUMBER=+919377095283
 
 SMTP_HOST=smtp.gmail.com
+SMTP_SERVICE=gmail
 SMTP_PORT=465
 SMTP_MAIL=technicalbhagatji1111@gmail.com
-SMTP_PASSWORD=crhn bvzu rjmr pcha
+SMTP_PASSWORD=masb wlmq oeiy arbt
 
 
 JWT_EXPIRE=7d
