--- a/server/package.json
+++ b/server/package.json
@@ -12,11 +12,14 @@
   "description": "",
   "dependencies": {
     "bcrypt": "6.0.0",
+    "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.10",
     "express": "^4.18.2",
     "mongoose": "^8.0.9",
+    "node-cron": "^4.1.1",
     "nodemailer": "^6.9.16",
     "twilio": "^5.4.0"
   },
