--- a/server/config.env
+++ b/server/config.env
@@ -15,5 +15,6 @@ SMTP_PASSWORD=masb wlmq oeiy arbt
 JWT_EXPIRE=60d
 JWT_SECRET_KEY=sfgwsfgwsefgwefwg 
 COOKIE_EXPIRE=60
+NODE_ENV=production
 
 TWILIO RECOVERY CODE :- MZZ11DADTB98XTSAEZ145YZ7
